Fixing visible background

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -54,3 +54,11 @@ html, body {
 .section-content {
   margin: 6em 0 30px !important;
 }
+
+/* Media query for sections */
+
+@media(max-width: 500px){
+  .section, .footer {
+    margin-top: -5%;
+  }
+}
